--- a/nfl.html
+++ b/nfl.html
@@ -120,221 +120,255 @@
     <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
      Upcoming Soccer Events
     </h2>
-   <table id="eventsTable">
-    <thead>
-     <tr>
-      <th>
-       Event
-      </th>
-      <th>
-       Start Time
-      </th>
-      <th>
-       Countdown
-      </th>
-     </tr>
-    </thead>
-    <tbody>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/redzone">
-        NFL RedZone
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/redzone">
+         NFL RedZone
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Pittsburgh Steelers vs Chicago Bears
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-2">
+         New England Patriots vs Cincinnati Bengals
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-3">
+         New York vs Detroit Lions
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-4">
+         Minnesota Vikings vs Green Bay Packers
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-5">
+         Seattle Seahawks vs Tennessee Titans
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-6">
+         Indianapolis Colts vs Kansas City Chiefs
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-7">
+         New York vs Baltimore Ravens
+        </a>
+       </td>
+       <td>
+        November 23, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-8">
+         Cleveland Browns vs Las Vegas Raiders
+        </a>
+       </td>
+       <td>
+        November 23, 2025 1:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 1:05 PM:00" data-start="November 23, 2025 1:05 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-9">
+         Jacksonville Jaguars vs Arizona Cardinals
+        </a>
+       </td>
+       <td>
+        November 23, 2025 1:05 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 1:05 PM:00" data-start="November 23, 2025 1:05 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-10">
+         Philadelphia Eagles vs Dallas Cowboys
+        </a>
+       </td>
+       <td>
+        November 23, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 1:25 PM:00" data-start="November 23, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-11">
+         Atlanta Falcons vs New Orleans Saints
+        </a>
+       </td>
+       <td>
+        November 23, 2025 1:25 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 1:25 PM:00" data-start="November 23, 2025 1:25 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-12">
+         Tampa Bay Buccaneers vs Los Angeles Rams
+        </a>
+       </td>
+       <td>
+        November 23, 2025 5:20 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 24, 2025 5:20 PM:00" data-start="November 23, 2025 5:20 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <h2>
+     NFL Schedule for Monday, November 24, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nfl-streams-1">
+         Carolina Panthers vs San Francisco 49ers
+        </a>
+       </td>
+       <td>
+        November 24, 2025 5:15 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 5:15 PM:00" data-start="November 24, 2025 5:15 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
        </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-1">
-        Pittsburgh Steelers vs Chicago Bears
-       </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-2">
-        New England Patriots vs Cincinnati Bengals
-       </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-3">
-        New York vs Detroit Lions
-       </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-4">
-        Minnesota Vikings vs Green Bay Packers
-       </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-5">
-        Seattle Seahawks vs Tennessee Titans
-       </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-6">
-        Indianapolis Colts vs Kansas City Chiefs
-       </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-7">
-        New York vs Baltimore Ravens
-       </a>
-      </td>
-      <td>
-       November 23, 2025 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 10:00 AM:00" data-start="November 23, 2025 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-8">
-        Cleveland Browns vs Las Vegas Raiders
-       </a>
-      </td>
-      <td>
-       November 23, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 1:05 PM:00" data-start="November 23, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-9">
-        Jacksonville Jaguars vs Arizona Cardinals
-       </a>
-      </td>
-      <td>
-       November 23, 2025 1:05 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 1:05 PM:00" data-start="November 23, 2025 1:05 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-10">
-        Philadelphia Eagles vs Dallas Cowboys
-       </a>
-      </td>
-      <td>
-       November 23, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 1:25 PM:00" data-start="November 23, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-11">
-        Atlanta Falcons vs New Orleans Saints
-       </a>
-      </td>
-      <td>
-       November 23, 2025 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 1:25 PM:00" data-start="November 23, 2025 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-12">
-        Tampa Bay Buccaneers vs Los Angeles Rams
-       </a>
-      </td>
-      <td>
-       November 23, 2025 5:20 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="November 24, 2025 5:20 PM:00" data-start="November 23, 2025 5:20 PM:00">
-       </span>
-      </td>
-     </tr>
-    </tbody>
-   </table>
-   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-     <li class="nav-item">
-      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-       Stream Request (Discord)
-      </a>
-     </li>
-    </ul>
-    <p class="mb-0 text-body-secondary text-center text-lg-start">
-     Roxiestreams © 2024
-    </p>
-   </footer>
-   <script src="js/bootstrap.bundle.min.js">
-   </script>
-   <script>
-    function startCountdown() {
+      </li>
+     </ul>
+     <p class="mb-0 text-body-secondary text-center text-lg-start">
+      Roxiestreams © 2024
+     </p>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js">
+    </script>
+    <script>
+     function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -363,7 +397,8 @@
         }
 
         window.onload = startCountdown;
-   </script>
+    </script>
+   </div>
   </div>
  </body>
 </html>
