--- a/soccer.html
+++ b/soccer.html
@@ -95,38 +95,30 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Inter Milan vs Milan</a>
-<td>November 23, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 10:45:00" data-start="November 23, 2025 11:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Manchester United vs Everton</a>
+<td>November 24, 2025 11:45 AM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 10:45:00" data-start="November 24, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Lille vs Paris</a>
-<td>November 23, 2025 11:45 AM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 10:45:00" data-start="November 23, 2025 11:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Espanyol vs Sevilla</a>
+<td>November 24, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 11:00:00" data-start="November 24, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Elche vs Real Madrid</a>
-<td>November 23, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 11:00:00" data-start="November 23, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Mirassol vs Ceará</a>
+<td>November 24, 2025 14:00 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 13:00:00" data-start="November 24, 2025 14:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Cincinnati vs Inter Miami</a>
-<td>November 23, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 13:00:00" data-start="November 23, 2025 14:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Racing Club vs River Plate</a>
+<td>November 24, 2025 14:15 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 13:15:00" data-start="November 24, 2025 14:15:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs Talleres Córdoba</a>
-<td>November 23, 2025 15:00 PM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 14:00:00" data-start="November 23, 2025 15:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Internacional vs Santos</a>
+<td>November 24, 2025 16:00 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 15:00:00" data-start="November 24, 2025 16:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Cruzeiro vs Corinthians</a>
-<td>November 23, 2025 15:30 PM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 14:30:00" data-start="November 23, 2025 15:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Colo-Colo vs Unión La Calera</a>
-<td>November 23, 2025 15:30 PM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 14:30:00" data-start="November 23, 2025 15:30:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-17">Philadelphia Union vs New York City</a>
-<td>November 23, 2025 16:45 PM</td>
-<td><span class="countdown-timer" data-end="November 24, 2025 15:45:00" data-start="November 23, 2025 16:45:00"></span></td>
-<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-6">San Diego vs Minnesota United</a>
+<td>November 24, 2025 19:00 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 18:00:00" data-start="November 24, 2025 19:00:00"></span></td>
+<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
