--- a/nba.html
+++ b/nba.html
@@ -249,6 +249,166 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for November 24, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Detroit Pistons vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        November 24, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 4:00 PM:00" data-start="November 24, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Cleveland Cavaliers vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        November 24, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 4:00 PM:00" data-start="November 24, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         New York Knicks vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        November 24, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 4:30 PM:00" data-start="November 24, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Dallas Mavericks vs Miami Heat
+        </a>
+       </td>
+       <td>
+        November 24, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 4:30 PM:00" data-start="November 24, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Denver Nuggets vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        November 24, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 5:00 PM:00" data-start="November 24, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Portland Trail Blazers vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        November 24, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 5:00 PM:00" data-start="November 24, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Chicago Bulls vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        November 24, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 5:00 PM:00" data-start="November 24, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Houston Rockets vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        November 24, 2025 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 6:30 PM:00" data-start="November 24, 2025 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Utah Jazz vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        November 24, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 7:00 PM:00" data-start="November 24, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Minnesota Timberwolves vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        November 24, 2025 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="November 25, 2025 7:00 PM:00" data-start="November 24, 2025 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
