--- a/fighting.html
+++ b/fighting.html
@@ -96,17 +96,17 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ufc">UFC Qatar: Tsarukyan vs Hooker</a></td>
-<td>November 22, 2025 07:00 AM</td>
-<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 22, 2025 07:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>November 24, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 24, 2025 17:00:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">RING IV: Night Of Champions</a></td>
-<td>November 22, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 22, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>November 25, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 25, 2025 17:00:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/aew">AEW: Full Gear</a></td>
-<td>November 22, 2025 16:00 PM</td>
-<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 22, 2025 16:00:00"></span></td>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>November 26, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 31, 2025 23:59:00" data-start="November 26, 2025 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
