--- a/index.html
+++ b/index.html
@@ -118,14 +118,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl">NFL Week 12</td>
-                    <td>November 23, 2025 10:00 AM</td>
-                    <td><span class="countdown-timer" data-start="November 23, 2025 07:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</td>
+                    <td>November 24, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 24, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer">Laliga</td>
-                    <td>November 23, 2025 12:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 23, 2025 12:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (MNF)</td>
+                    <td>November 24, 2025 17:15 PM</td>
+                    <td><span class="countdown-timer" data-start="November 23, 2025 17:15:00" data-end="November 30, 2025 23:30:00"></span></td>
+                </tr>
+                <tr>
+                    <td><a href="https://roxiestreams.live/soccer-streams-6">MLS</td>
+                    <td>November 24, 2025 19:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 23, 2025 19:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
