--- a/soccer.html
+++ b/soccer.html
@@ -95,30 +95,43 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Manchester United vs Everton</a>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Galatasaray vs Union Saint Gilloise</a>
 <td>November 24, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="November 25, 2025 10:45:00" data-start="November 24, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Espanyol vs Sevilla</a>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Ajax vs Benfica</a>
 <td>November 24, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 25, 2025 11:00:00" data-start="November 24, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Mirassol vs Ceará</a>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Bodø / Glimt vs Juventus</a>
 <td>November 24, 2025 14:00 PM</td>
 <td><span class="countdown-timer" data-end="November 25, 2025 13:00:00" data-start="November 24, 2025 14:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Racing Club vs River Plate</a>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Chelsea vs Barcelona</a>
+<td>November 24, 2025 19:00 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 18:00:00" data-start="November 24, 2025 19:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Slavia Praha vs Athletic Club</a>
 <td>November 24, 2025 14:15 PM</td>
 <td><span class="countdown-timer" data-end="November 25, 2025 13:15:00" data-start="November 24, 2025 14:15:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Internacional vs Santos</a>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Dortmund vs Villarreal</a>
 <td>November 24, 2025 16:00 PM</td>
 <td><span class="countdown-timer" data-end="November 25, 2025 15:00:00" data-start="November 24, 2025 16:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">San Diego vs Minnesota United</a>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Napoli vs Qarabağ</a>
 <td>November 24, 2025 19:00 PM</td>
 <td><span class="countdown-timer" data-end="November 25, 2025 18:00:00" data-start="November 24, 2025 19:00:00"></span></td>
-<tr></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Marseille vs Newcastle</a>
+<td>November 24, 2025 19:00 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 18:00:00" data-start="November 24, 2025 19:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Manchester City vs Bayer Leverkusen</a>
+<td>November 24, 2025 19:00 PM</td>
+<td><span class="countdown-timer" data-end="November 25, 2025 18:00:00" data-start="November 24, 2025 19:00:00"></span></td>
+<tr>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
