--- a/soccer.html
+++ b/soccer.html
@@ -98,43 +98,63 @@
 <td><a href="https://roxiestreams.live/soccer-streams-1">Galatasaray vs Union Saint Gilloise</a>
 <td>November 25, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
-<tr>
+</tr>
+<td>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Ajax vs Benfica</a>
 <td>November 25, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">UEFA Golazo Show</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-10">UEFA Golazo Show</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Bodø / Glimt vs Juventus</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-3">Bodø / Glimt vs Juventus</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Chelsea vs Barcelona</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-4">Chelsea vs Barcelona</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Slavia Praha vs Athletic Club</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-5">Slavia Praha vs Athletic Club</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Dortmund vs Villarreal</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-6">Dortmund vs Villarreal</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Napoli vs Qarabağ</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-7">Napoli vs Qarabağ</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Marseille vs Newcastle</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-8">Marseille vs Newcastle</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Manchester City vs Bayer Leverkusen</a>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-9">Manchester City vs Bayer Leverkusen</a>
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
-<tr>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-11">athletico Mineiro vs Fluminense</a>
+<td>November 25, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
+</tr>
+<td>
+<a href="https://roxiestreams.live/soccer-streams-12">Gremio vs Palmeiras</a>
+<td>November 25, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
+</tr>
+<td>
 </tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
