--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</td>
-                    <td>November 24, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 24, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/soccer">UEFA Champions League</td>
+                    <td>November 25, 2025 09:45 AM</td>
+                    <td><span class="countdown-timer" data-start="November 25, 2025 09:45:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/nfl-streams-1">NFL (MNF)</td>
-                    <td>November 24, 2025 17:15 PM</td>
-                    <td><span class="countdown-timer" data-start="November 24, 2025 17:15:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/nba">NBA</td>
+                    <td>November 25, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 25, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/soccer-streams-6">MLS</td>
-                    <td>November 24, 2025 19:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 24, 2025 19:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</td>
+                    <td>November 25, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 25, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
