--- a/nba.html
+++ b/nba.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
+
 <html data-bs-theme="dark" lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
-  </title>
-  <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
-  <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
-  <link href="https://fonts.googleapis.com" rel="preconnect"/>
-  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-  <link href="css/main.css" rel="stylesheet" type="text/css"/>
-  <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-  <style>
-   <script>
+<head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
+<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<link href="css/main.css" rel="stylesheet" type="text/css"/>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<style>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -62,237 +61,66 @@
         h2 {
             color: pink;
         }
-  </style>
- </head>
- <body>
-  <nav class="navbar navbar-expand-lg bg-black">
-   <div class="container-fluid">
-    <a class="navbar-brand" href="https://roxiestreams.live/">
-     RoxieStreams
-    </a>
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-     <span class="navbar-toggler-icon">
-     </span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/soccer">
-        Soccer
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/mlb">
-        MLB
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/nba">
-        NBA
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/nfl">
-        NFL
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/fighting">
-        Fighting
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://roxiestreams.live/motorsports">
-        Motorsports
-       </a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-      </li>
-     </ul>
-    </div>
-   </div>
-  </nav>
-  <div class="container container-fluid pt-2 text-white">
-   <div class="mt-5">
-    <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NBA Events
-    </h2>
-    <table id="eventsTable">
-     <thead>
-      <tr>
-       <th>
-        Event
-       </th>
-       <th>
-        Start Time
-       </th>
-       <th>
-        Countdown
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-1">
-         Detroit Pistons vs Indiana Pacers
-        </a>
-       </td>
-       <td>
-        November 24, 2025 4:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 4:00 PM:00" data-start="November 24, 2025 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-2">
-         Cleveland Cavaliers vs Toronto Raptors
-        </a>
-       </td>
-       <td>
-        November 24, 2025 4:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 4:00 PM:00" data-start="November 24, 2025 4:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-3">
-         New York Knicks vs Brooklyn Nets
-        </a>
-       </td>
-       <td>
-        November 24, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 4:30 PM:00" data-start="November 24, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-4">
-         Dallas Mavericks vs Miami Heat
-        </a>
-       </td>
-       <td>
-        November 24, 2025 4:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 4:30 PM:00" data-start="November 24, 2025 4:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-5">
-         Denver Nuggets vs Memphis Grizzlies
-        </a>
-       </td>
-       <td>
-        November 24, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 5:00 PM:00" data-start="November 24, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-6">
-         Portland Trail Blazers vs Milwaukee Bucks
-        </a>
-       </td>
-       <td>
-        November 24, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 5:00 PM:00" data-start="November 24, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-7">
-         Chicago Bulls vs New Orleans Pelicans
-        </a>
-       </td>
-       <td>
-        November 24, 2025 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 5:00 PM:00" data-start="November 24, 2025 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-8">
-         Houston Rockets vs Phoenix Suns
-        </a>
-       </td>
-       <td>
-        November 24, 2025 6:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 6:30 PM:00" data-start="November 24, 2025 6:30 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-9">
-         Utah Jazz vs Golden State Warriors
-        </a>
-       </td>
-       <td>
-        November 24, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 7:00 PM:00" data-start="November 24, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-10">
-         Minnesota Timberwolves vs Sacramento Kings
-        </a>
-       </td>
-       <td>
-        November 24, 2025 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="November 25, 2025 7:00 PM:00" data-start="November 24, 2025 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-     </tbody>
-    </table>
-    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-     <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-      <li class="nav-item">
-       <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
-      </li>
-     </ul>
-     <p class="mb-0 text-body-secondary text-center text-lg-start">
-      Roxiestreams © 2024
-     </p>
-    </footer>
-    <script src="js/bootstrap.bundle.min.js">
-    </script>
-    <script>
-     function startCountdown() {
+    </style>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg bg-black">
+<div class="container-fluid">
+<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
+<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+</div>
+</div></nav>
+<div class="container container-fluid pt-2 text-white">
+<div class="mt-5">
+<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming Soccer Events</h2>
+<table id="eventsTable">
+<thead>
+<tr>
+<th>Event</th>
+<th>Start Time</th>
+<th>Countdown</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href="https://roxiestreams.live/nba-streams-1">Atlanta Hawks vs Washington Wizards</a>
+<td>November 25, 2025 16:00 PM</td>
+<td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
+</tr>
+<td>
+<td><a href="https://roxiestreams.live/nba-streams-2">Orlando Magic vs Philadelphia 76ers</a>
+<td>November 25, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
+</tr>
+<td>
+<a href="https://roxiestreams.live/nba-streams-3">Los Angeles Clippers vs Los Angeles Lakers</a>
+<td>November 25, 2025 20:00 PM</td>
+<td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
+</tr>
+<td>
+</tbody></table>
+</div>
+<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
+</ul>
+<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
+</footer>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script>
+        function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -322,7 +150,5 @@
 
         window.onload = startCountdown;
     </script>
-   </div>
-  </div>
- </body>
+</div></body>
 </html>
