--- a/soccer.html
+++ b/soccer.html
@@ -100,7 +100,7 @@
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
 </tr>
 <td>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Ajax vs Benfica</a>
+<a href="https://roxiestreams.live/soccer-streams-2">Ajax vs Benfica</a>
 <td>November 25, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
 </tr>
