--- a/soccer.html
+++ b/soccer.html
@@ -135,11 +135,11 @@
 <td>November 25, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<a href="https://roxiestreams.live/soccer-streams-11">Athletico Mineiro vs Fluminense</a>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Athletico Mineiro vs Fluminense</a>
 <td>November 25, 2025 16:30 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 </tr>
-<a href="https://roxiestreams.live/soccer-streams-12">Gremio vs Palmeiras</a>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Gremio vs Palmeiras</a>
 <td>November 25, 2025 16:30 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 </tr>
