--- a/nba.html
+++ b/nba.html
@@ -99,17 +99,14 @@
 <td>November 25, 2025 16:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
 </tr>
-<td>
 <td><a href="https://roxiestreams.live/nba-streams-2">Orlando Magic vs Philadelphia 76ers</a>
 <td>November 25, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
 </tr>
-<td>
-<a href="https://roxiestreams.live/nba-streams-3">Los Angeles Clippers vs Los Angeles Lakers</a>
+<td><a href="https://roxiestreams.live/nba-streams-3">Los Angeles Clippers vs Los Angeles Lakers</a>
 <td>November 25, 2025 20:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 </tr>
-<td>
 </tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
