--- a/soccer.html
+++ b/soccer.html
@@ -95,52 +95,60 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Galatasaray vs Union Saint Gilloise</a>
-<td>November 25, 2025 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Paphos vs Monaco</a>
+<td>November 26, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Ajax vs Benfica</a>
-<td>November 25, 2025 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">København vs Kairat</a>
+<td>November 26, 2025 09:45 AM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 08:45:00" data-start="November 25, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">UEFA Golazo Show</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">UEFA Golazo Show</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Bodø / Glimt vs Juventus</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Arsenal vs Bayern Munich</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Chelsea vs Barcelona</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Atlético Madrid vs Inter Milan</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Slavia Praha vs Athletic Club</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Eintracht Frankfurt vs Atalanta</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Dortmund vs Villarreal</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Liverpool vs PSV</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Napoli vs Qarabağ</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">PSG vs Tottenham</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Marseille vs Newcastle</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Sporting CP vs Club Brugge</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Manchester City vs Bayer Leverkusen</a>
-<td>November 25, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Olympiakos Piraeus vs Real Madrid</a>
+<td>November 26, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Athletico Mineiro vs Flamengo</a>
-<td>November 25, 2025 16:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">RB Bragantino vs Fortaleza</a>
+<td>November 26, 2025 14:00 PM</td>
+<td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Juárez vs Toluca</a>
+<td>November 26, 2025 17:00 PM</td>
+<td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 12:00:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Monterrey vs América</a>
+<td>November 26, 2025 19:05 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 16:30:00"></span></td>
 </tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Gremio vs Palmeiras</a>
-<td>November 25, 2025 16:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Tijuana vs Tigres UANL</a>
+<td>November 26, 2025 20:00 PM</td>
 <td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 16:30:00"></span></td>
 </tr>
 </tbody></table>
