--- a/index.html
+++ b/index.html
@@ -119,18 +119,18 @@
             <tbody>
                 <tr>
                     <td><a href="https://roxiestreams.live/soccer">UEFA Champions League</td>
-                    <td>November 25, 2025 09:45 AM</td>
-                    <td><span class="countdown-timer" data-start="November 25, 2025 09:45:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td>November 26, 2025 09:45 AM</td>
+                    <td><span class="countdown-timer" data-start="November 26, 2025 09:45:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
                     <td><a href="https://roxiestreams.live/nba">NBA</td>
-                    <td>November 25, 2025 16:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 25, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td>November 26, 2025 16:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 26, 2025 16:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
-                    <td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</td>
-                    <td>November 25, 2025 17:00 PM</td>
-                    <td><span class="countdown-timer" data-start="November 25, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
+                    <td><a href="https://roxiestreams.live/wwe-streams">AEW</td>
+                    <td>November 26, 2025 17:00 PM</td>
+                    <td><span class="countdown-timer" data-start="November 26, 2025 17:00:00" data-end="November 30, 2025 23:30:00"></span></td>
                 </tr>
                 <tr>
             </tbody>
