--- a/soccer-streams-10.html
+++ b/soccer-streams-10.html
@@ -97,7 +97,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://abigail.009292.xyz/tudn.m3u8')">Stream 1 (ES)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/tudn.m3u8')">Stream 1 (ES)</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/madrid.m3u8')">Stream 2 (EN)</button>
             </div>
             <div class="embedchat">
@@ -133,7 +133,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://abigail.009292.xyz/tudn.m3u8');
+            showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/tudn.m3u8');
         };
     </script>
     <script>
