--- a/soccer-streams-10.html
+++ b/soccer-streams-10.html
@@ -98,7 +98,7 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/tudn.m3u8')">Stream 1 (ES)</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/madrid.m3u8')">Stream 2 (EN)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://simplee.pixelcraft.qzz.io/madrid.m3u8')">Stream 2 (EN)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
