--- a/nba-streams-2.html
+++ b/nba-streams-2.html
@@ -98,8 +98,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/nba2.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://again.009292.xyz/nba2alt.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://simplee.pixelcraft.qzz.io/nba2.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://simplee.pixelcraft.qzz.io/nba2alt.m3u8')">Stream 2</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.pixelcraft.qzz.io/nba2alty.m3u8')">Stream 3</button>
             </div>
             <div class="embedchat">
@@ -135,7 +135,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://again.009292.xyz/nba2.m3u8');
+            showPlayer('clappr', 'https://simplee.pixelcraft.qzz.io/nba2.m3u8');
         };
     </script>
     <script>
