--- a/soccer.html
+++ b/soccer.html
@@ -146,12 +146,12 @@
 <td><a href="https://roxiestreams.live/soccer-streams-13">Monterrey vs América</a>
 <td>November 26, 2025 19:05 PM</td>
 <td><span class="countdown-timer" data-end="November 27, 2025 18:05:00" data-start="November 26, 2025 19:05:00"></span></td>
-</td></tr>
+</tr>
 <td><a href="https://roxiestreams.live/soccer-streams-14">Tijuana vs Tigres UANL</a>
 <td>November 26, 2025 20:00 PM</td>
-<td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 25, 2025 16:30:00"></span></td>
-</td></td></tr>
-</td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
+<td><span class="countdown-timer" data-end="November 26, 2025 11:00:00" data-start="November 26, 2025 20:00:00"></span></td>
+</tr>
+</tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
