--- a/soccer.html
+++ b/soccer.html
@@ -95,63 +95,59 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Paphos vs Monaco</a>
-<td>November 26, 2025 09:45 AM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 08:45:00" data-start="November 26, 2025 09:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Aston Villa vs Young Boys</a>
+<td>November 27, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">København vs Kairat</a>
-<td>November 26, 2025 09:45 AM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 08:45:00" data-start="November 26, 2025 09:45:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Feyenoord vs Celtic</a>
+<td>November 27, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">UEFA Golazo Show</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Roma vs Midtjylland</a>
+<td>November 27, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Arsenal vs Bayern Munich</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Slovan Bratislava vs Rayo Vallecano</a>
+<td>November 27, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Atlético Madrid vs Inter Milan</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Porto vs Nice</a>
+<td>November 27, 2025 09:45 AM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 08:45:00" data-start="November 27, 2025 09:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Eintracht Frankfurt vs Atalanta</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Aberdeen vs Noah</a>
+<td>November 27, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Liverpool vs PSV</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Strasbourg vs Crystal Palace</a>
+<td>November 27, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">PSG vs Tottenham</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Shamrock Rovers vs Shakhtar Donetsk</a>
+<td>November 27, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Sporting CP vs Club Brugge</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Rangers vs Sporting Braga</a>
+<td>November 27, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Olympiakos Piraeus vs Real Madrid</a>
-<td>November 26, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 12:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Nottingham Forest vs Malmö FF</a>
+<td>November 27, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">RB Bragantino vs Fortaleza</a>
-<td>November 26, 2025 14:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 13:00:00" data-start="November 26, 2025 14:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Maccabi Tel Aviv vs Lyon</a>
+<td>November 27, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 11:00:00" data-start="November 27, 2025 12:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Juárez vs Toluca</a>
-<td>November 26, 2025 17:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 16:00:00" data-start="November 26, 2025 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Fluminense vs São Paulo</a>
+<td>November 27, 2025 15:30 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 14:30:00" data-start="November 27, 2025 15:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Monterrey vs América</a>
-<td>November 26, 2025 19:05 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 18:05:00" data-start="November 26, 2025 19:05:00"></span></td>
-</tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Tijuana vs Tigres UANL</a>
-<td>November 26, 2025 20:00 PM</td>
-<td><span class="countdown-timer" data-end="November 27, 2025 11:00:00" data-start="November 26, 2025 20:00:00"></span></td>
-</tr>
-</tbody></table>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Guadalajara vs Cruz Azul</a>
+<td>November 27, 2025 18:07 PM</td>
+<td><span class="countdown-timer" data-end="November 28, 2025 17:07:00" data-start="November 27, 2025 18:07:00"></span></td>
+<tr>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
